<resources>
    <string name="topodroid_man">https://sites.google.com/site/speleoapps/home/topodroid/docs/TopoDroid-2.2.4.pdf</string>
    <string name="app_name">TopoDroid</string>
    <string name="version_ask">You are updating to a new version of TopoDroid.\nDo you want to reinstall drawing items?</string>
    <string name="version_title">Version update</string>
    <string name="POINT">POINT</string>
    <string name="LINE">LINE</string>
    <string name="AREA">AREA</string>
    <string name="HELP">HELP</string>
    <string name="STATION">STATION </string>
    <string name="memoryA3">DistoX A3 memory</string>
    <string name="memoryX310">DistoX X310 memory</string>
    <string name="memory_data">DistoX data</string>
    <string name="td_symbol_text">Do you need to install drawing tools?\nYou can do it later with the app TdSymbol</string>
    <string name="td_symbol_ask">Don\'t ask me again</string>
    <string name="thp_label">label</string>
    <string name="thl_wall">wall</string>
    <string name="tha_water">water</string>
    <string name="missing_area">AREA</string>
    <string name="missing_hint">Please, enable the missing tools or install them</string>
    <string name="missing_line">LINE</string>
    <string name="missing_point">POINT</string>
    <string name="missing_station">Missing station</string>
    <string name="missing_symbols">There are missing drawing tools.\nSave anyway ?</string>
    <string name="missing_title">MISSING SYMBOLS</string>
    <string name="missing_warning">The following drawing tools are missing.\n</string>
    <string name="calib_exists">Calibration already exists</string>
    <string name="calib_delete">Delete calibration </string>
    <string name="calib_device_mismatch">WARNING: Calibration-Device mismatch</string>
    <string name="calib_no_name">You must write the calibration name</string>
    <string name="calib_saved">Saved calibration</string>
    <string name="calib_updated">Updated calibration</string>
    <string name="calib_compute_groups">Computing calibration data groups ...</string>
    <string name="calib_compute_coeffs">Computing calibration coefficients ...</string>
    <string name="calib_read_coeffs">Reading calibration coefficients ...</string>
    <string name="calib_write_coeffs">Writing calibration coefficients ...</string>
    <string name="connect_failed">Failed connect</string>
    <string name="data"> data</string>
    <string name="using">Using %1$s</string>
    <string name="calib_error">Error: %1$.4f degrees</string>
    <string name="calib_max_error">Max. error: %1$.4f degrees</string>
    <string name="calib_iter">Iterations: %1$d</string>
    <string name="device_illegal_addr">Illegal memory address</string>
    <string name="device_none">No DistoX selected</string>
    <string name="device_pairing">Pairing: check notifications</string>
    <string name="device_reset">Reset DistoX memory</string>
    <string name="bt_reset">Reset bluetooth connection</string>
    <string name="comment">comment</string>
    <string name="duplicate">duplicate</string>
    <string name="regular">regular</string>
    <string name="surface">surface</string>
    <string name="extend_ignore">None</string>
    <string name="extend_left">Left</string>
    <string name="extend_right">Right</string>
    <string name="extend_vert">Vert</string>
    <string name="external_prompt">Enter measurement</string>
    <string name="few_data">Not enough data</string>
    <string name="import_title">File Import</string>
    <string name="import_wait">Importing file... please wait...</string>
    <string name="import_already">Survey already imported</string>
    <string name="import_none">No file to import</string>
    <string name="sketch_loading">Loading sketch ... please wait...</string>
    <string name="sketch_saving">Saving sketch ... please wait...</string>
    <string name="head_tail">Memory: </string>
    <string name="head_tail_failed">Failed to read DistoX memory</string>
    <string name="illegal_data_value">Illegal data value</string>
    <string name="label_title">LABEL</string>
    <string name="label_text">Enter the label text</string>
    <string name="altitude">Alt. </string>
    <string name="latitude">Lat. </string>
    <string name="longitude">Long. </string>
    <string name="altitude_hint">Alt. [meters]</string>
    <string name="altitude_wgs84">WGS84 altitude</string>
    <string name="latitude_hint">Lat. dd:mm:ss.sss</string>
    <string name="longitude_hint">Long. dd:mm:ss.sss</string>
    <string name="loop_closure_errors">Loop closure errors</string>
    <string name="loop_none">no loop</string>
    <string name="error_azimuth_required">Azimuth is required</string>
    <string name="error_length_required">Length is required</string>
    <string name="error_clino_required">Clino is required</string>
    <string name="error_begin_required">Start address is required</string>
    <string name="error_end_required">Final address is required</string>
    <string name="error_from_required">First station is required</string>
    <string name="error_group_required">Group number is required</string>
    <string name="error_alt_required">Altitude is required</string>
    <string name="error_lat_required">Latitude is required</string>
    <string name="error_long_required">Longitude is required</string>
    <string name="error_name_required">Name is required</string>
    <string name="error_start_required">Reference station is required</string>
    <string name="error_station_required">Station is required</string>
    <string name="error_sensor_required">Sensor is required</string>
    <string name="error_value_required">Value is required</string>
    <string name="scale">scale</string>
    <string name="reversed">reversed</string>
    <string name="options">options</string>
    <string name="outline">outline</string>
    <string name="out">out</string>
    <string name="in">in</string>
    <string name="none">none</string>
    <string name="barrier_add">Break midline display?</string>
    <string name="barrier_del">Continue midline display?</string>
    <string name="no_calib">No calibration</string>
    <string name="no_calibration">No calibration selected</string>
    <string name="no_capture_app">No image capture app</string>
    <string name="no_cave3d">Cave3D not installed</string>
    <string name="no_db">No database</string>
    <string name="no_device_address">Device address not selected</string>
    <string name="no_device_found">No device found</string>
    <string name="no_geomag">Failed to get GeoMag</string>
    <string name="no_gms">Calibration has no data.\nUse Download button</string>
    <string name="no_leg_intersection">Section line does not cross any leg</string>
    <string name="no_paired_device">No paired device.\nScan and pair a DistoX</string>
    <string name="no_photos">Survey has no photo</string>
    <string name="no_plots">Survey has no sketch\nUse Add button to make one</string>
    <string name="no_proj4">Proj$ not installed</string>
    <string name="no_sensors">Survey has no measurement</string>
    <string name="no_shots">Survey has no shots.\nUse Download button to get some</string>
    <string name="no_survey">No survey selected.</string>
    <string name="no_tdsymbol">TdSymbol not installed</string>
    <string name="no_thmanager">ThManager not installed</string>
    <string name="no_undelete">No item to recover</string>
    <string name="menu_about">About</string>
    <string name="menu_detach">Disconnect</string>
    <string name="menu_recover">Recover</string>
    <string name="menu_help">Help</string>
    <string name="menu_logs">Logs</string>
    <string name="menu_manual">Manual</string>
    <string name="menu_options">Options</string>
    <string name="menu_palette">Palette</string>
    <string name="popup_join_pt">Snap to nearby point</string>
    <string name="popup_snap_ln">Snap to nearby line</string>
    <string name="popup_split_pt">Split point</string>
    <string name="popup_split_ln">Split line</string>
    <string name="popup_sharp_pt">Sharp corner</string>
    <string name="popup_remove_pt">Remove point</string>
    <string name="not_available">BT not available</string>
    <string name="not_enabled">BT not enabled</string>
    <string name="not_implemented">Not implemented yet</string>
    <string name="null_bitmap">null bitmap</string>
    <string name="photo">photo</string>
    <string name="photo_comment_prompt">Enter the photo comment</string>
    <string name="photo_name">station/name</string>
    <string name="photo_photo">photo</string>
    <string name="photo_sensor">sensor</string>
    <string name="photo_external">measurement</string>
    <string name="photo_sensor_prompt">Select photo or sensor</string>
    <string name="photo_shot">add shot</string>
    <string name="photo_survey">split survey</string>
    <string name="picture_no_station">Need a station/name for the photo</string>
    <string name="plot_delete">Delete sketch ?</string>
    <string name="plot_name">Sketch name</string>
    <string name="plot_new">New sketch</string>
    <string name="plot_not_found">Sketch not found</string>
    <string name="plot_start">Base station</string>
    <string name="read_">Read </string>
    <string name="read_fail_with_code">Read failure: error code </string>
    <string name="read_failed">Failed to read from DistoX</string>
    <string name="saved_file_">Saved file\ </string>
    <string name="saving_">Saving </string>
    <string name="saving_file_failed">Failed to save file</string>
    <string name="scrap_name">sketch name</string>
    <string name="splay">splay</string>
    <string name="too_many_leg_intersection">Section line crosses more than one leg</string>
    <string name="sensor">sensor</string>
    <string name="sensor_gravity">gravity</string>
    <string name="sensor_light">light</string>
    <string name="sensor_magnetic_field">magnetic field</string>
    <string name="sensor_pressure">pressure</string>
    <string name="sensor_proximity">proximity</string>
    <string name="sensor_temperature">temperature</string>
    <string name="sensor_type">type</string>
    <string name="sensor_value">value</string>
    <string name="sensor_comment">comment</string>
    <string name="shot_from">from</string>
    <string name="shot_info">Enter shot data</string>
    <string name="shot_leg">repeated leg shot</string>
    <string name="shot_note">note</string>
    <string name="shot_reverse">reverse</string>
    <string name="shot_to">to</string>
    <string name="station">station</string>
    <string name="station_ask">Insert station ?</string>
    <string name="station_base">reference station</string>
    <string name="station_viewed">viewed station</string>
    <string name="survey_exists">Survey name conflict</string>
    <string name="survey_date">yyyy.mm.dd</string>
    <string name="survey_delete">Delete survey   </string>
    <string name="survey_not_attached">WARNING: unattached shots</string>
    <string name="declination">magnetic declination</string>
    <string name="description">description</string>
    <string name="name">name</string>
    <string name="team">team</string>
    <string name="toggle_device">Toggle device calibration mode</string>
    <string name="toggle_failed">Failed to toggle DistoX</string>
    <string name="toggle_ok">Toggled DistoX calibration mode</string>
    <string name="undelete_text">Tap item to recover</string>
    <string name="visible_border">visible border</string>
    <string name="vthreshold">vert. threshold</string>
    <string name="button_cancel"    >Cancel    </string>
    <string name="button_convert"   >Convert   </string>
    <string name="button_delete"    >Delete    </string>
    <string name="button_geomag"    >GeoMag    </string>
    <string name="button_measure"   >Measure   </string>
    <string name="button_save"      >Save      </string>
</resources>