<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="6dp"
    android:paddingRight="6dp"
    android:paddingBottom="3dp">

    <!-- TextView android:id="@+id/fix_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:textSize="18sp"
        / -->
     					  
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
      android:orientation="horizontal" 
      >
      <EditText android:id="@+id/fix_decl" 
        android:singleLine="true" 
        android:layout_marginTop="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:hint="@string/declination"
        />
      <Button android:id="@+id/fix_geomag"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_gravity="left"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/button_geomag"
        />
    </LinearLayout>
     					  
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
      android:orientation="horizontal" 
      >
      <TextView android:id="@+id/fix_crs" 
        android:singleLine="true" 
        android:layout_marginTop="2dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:hint="Long-Lat"
        />
      <Button android:id="@+id/fix_convert"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_gravity="left"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/button_convert"
        />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
      android:orientation="horizontal" 
      >
    <TextView android:id="@+id/fix_station_caption"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/station"
       />
    <EditText android:id="@+id/fix_station" 
       android:singleLine="true" 
       android:layout_marginTop="2dp"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content" 
       android:hint="@string/station"
       />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content"
      android:orientation="horizontal" 
      >
      <Button android:id="@+id/fix_ok"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_gravity="left"
        android:paddingRight="10dp"
        android:text="@string/button_save"
        />
   		
      <!-- Button android:id="@+id/fix_cancel"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_gravity="left"
        android:paddingLeft="10dp"
        android:text="@string/button_cancel"
        / -->
      <Button android:id="@+id/fix_drop"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_gravity="right" 
        android:text="@string/button_delete"
        />
    </LinearLayout>
   		
</LinearLayout>
